# nbc_personal_project3

./: .gitignore  README.md  pyproject.toml
drf_todo/: settings.py
todos/: models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
